Add: Kahn: The Trouble with Literature

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -122,7 +122,7 @@
         lang="de">Sozialwissenschaften</a> (in German).
         There are also defences of the social sciences similar to the
         defences of the humanities.)
-        <!--Defences on social sciences:
+        <!--Defences of social sciences:
           Simon Bastow: The Impact of the Social Sciences: How Academics and their Research Make a Difference.
           John D. Brewer: The Public Value of the Social Sciences: An Interpretative Essay.
         -->
@@ -944,6 +944,18 @@
           <br />From the publisher's blurb:
           <q>For more than forty years, Bloom has transformed college students into lifelong readers with his unrivaled love for literature. Now, at a time when faster and easier electronic media threatens to eclipse the practice of reading, Bloom draws on his experience as critic, teacher, and prolific reader to plumb the great books for their sustaining wisdom.</q>
         </li>
+        <li>Kahn, Victoria:
+          <i class="booktitle">The Trouble with Literature</i>.
+          Clarendon Lectures in English. Oxford University Press, 2020. (208 pages)
+          <a href="https://global.oup.com/academic/product/the-trouble-with-literature-9780198808749"><abbr>ISBN</abbr> 9780198808749</a>.
+          <br />From the publisher's book description:
+          <q>This book, based on the Clarendon Lectures in English for 2017, argues that the literature of the English Reformation marks a turning point in Western thinking about literature and literariness.
+          But instead of arguing that the Reformation fostered English literature, as scholars have often done,
+          Victoria Kahn claims that literature helped undo the Reformation, with implications for both poetry and belief. (&hellip;)</q>
+          <br />Weber, Thomas:
+          <a href="https://lareviewofbooks.org/article/believing-in-literature/">Believing in Literature</a>,
+          <i class="magazine">Los Angeles Review of Books</i>, 03.08.2020.
+        </li>
         <li>Bauer, Susan Wise:
           <i class="booktitle">The Well-Educated Mind: A Guide to the Classical Education You Never Had</i>. Second edition. Norton, 2015. (480 pages)
           <a href="http://books.wwnorton.com/books/978-0-393-08096-4/"><abbr>ISBN</abbr> 978-0-393-08096-4</a>.
@@ -1193,6 +1205,10 @@
     <section>
       <h2></h2>
       <ul>
+        <li>:
+          <i class="booktitle"></i>.
+          <a href=""><abbr>ISBN</abbr> </a>.
+        </li>
         <li>
           <a href=""></a>
         </li>
