Add: Marxism vs Communism (Wolff); The Difference Between Socialism, Communism, and Marxism Explained by a Marxist

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -308,6 +308,17 @@
           <a href="https://www.splcenter.org/fighting-hate/intelligence-report/2003/cultural-marxism-catching">'Cultural Marxism' Catching On</a>,
           <i class="magazine">Intelligence Report</i> (Southern Poverty Law Center&nbsp;/ <abbr>SPLC</abbr>), 15.08.2013.
         </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=meAAIL6dswk">Marxism vs Communism (<abbr>w/</abbr> Richard Wolff)</a>
+          (<i class="ytchannel">Thom Hartmann Program</i> on YouTube, 14 minutes, 25.05.2019).
+        </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=vyl2DeKT-Vs">The Difference Between Socialism, Communism, and Marxism Explained by a Marxist</a>
+          (<i class="ytchannel">azureScapegoat</i> on YouTube, 11 minutes, 18.02.2017).
+          See also the website
+          <a href="https://www.socialism101.com/">Socialism101.com</a>,
+          a website by the creator of the video.
+        </li>
       </ul>
     </section>
 
