Add: Wolff: Undersanding Marxism

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -172,6 +172,16 @@
           <a href="http://www.schmetterling-verlag.de/page-5_isbn-3-89657-697-6.htm" hreflang="de"><abbr>ISBN</abbr> 3-89657-697-6</a>.
           <!--@@see also http://www.theorie.org/titel/697_kritik_der_politischen_oekonomie -->
         </li>
+        <li>Wolff, Richard D.:
+          <i class="booktitle">Understanding Marxism</i>. Democracy at Work, 2018.
+          <a href="https://www.democracyatwork.info/books#bookUM"><abbr>ISBN</abbr> 978-0-359-46702-0</a>.
+          <br />From the publisher's book description:
+          <q>(&hellip;) There are rising demands for accessible introductions to Marxism and to the social changes it suggests.
+          This essay responds to that interest. It seeks to provide bases for real solutions now that the flaws and failures of contemporary capitalism are exposed again, and again.
+          Marxism always was the critical shadow of capitalism. Their interactions changed them both. Now Marxism is once again stepping into the light as capitalism shakes from its own excesses and confronts decline.
+          Hopefully this book can help our era’s renewal of Marxism. (&hellip;)</q>
+          <!--buy at Lulu.com: https://www.lulu.com/en/us/shop/richard-d-wolff/understanding-marxism/paperback/product-189py59w.html -->
+        </li>
       </ul>
 
       <p>Book recommendations and reading lists:</p>
