Add: Understanding Marxism: Q and A with Richard D. Wolff

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -182,6 +182,12 @@
           Hopefully this book can help our era’s renewal of Marxism. (&hellip;)</q>
           <!--buy at Lulu.com: https://www.lulu.com/en/us/shop/richard-d-wolff/understanding-marxism/paperback/product-189py59w.html -->
         </li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=eU-AkeOyiOQ">Understanding Marxism: <abbr>Q&amp;A</abbr> with Richard D. Wolff</a>
+          (<i class="ytchannel">Democracy at Work</i> on YouTube, 114 minutes, 13.06.2019).
+          <br /><q><abbr>Prof.</abbr> Wolff talks about the impetus for the book and why Marxism is appealing to a growing audience.</q>
+          Recorded at Judson Memorial Church on 12.06.2019.
+        </li>
       </ul>
 
       <p>Book recommendations and reading lists:</p>
