Add: Adorno / Horkheimer / Kogon: Die verwaltete Welt. Theodor W. Adorno (Porträt)

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1278,6 +1278,21 @@
           <a href="https://www.versobooks.com/lists/3982-critical-theory-verso-student-reading">Critical Theory: Verso Student Reading</a>,
           <i class="website">Verso</i>, 23.08.2020.
         </li>
+        <li><span lang="de">
+          <a href="https://www.youtube.com/watch?v=89o2VYn7MJc">Adorno / Horkheimer / Kogon: Die verwaltete Welt oder: Die Krise des Individuums</a>
+          (<i class="ytchannel">dianoetik</i></span> on YouTube, 53 minutes, 08.03.2019.
+          <br />Recording of a conversation between Theodor W. Adorno, Max Horkheimer and Eugen Kogon for the
+          <span lang="de">Hessischer Rundfunk</span>, broadcast on 04.09.1950.
+          See also <span lang="de">Max Horkheimer: <i class="booktitle">Gesammelte Schriften. Band 13: Nachgelassene Schriften 1949-1972</i>.
+          Frankfurt am Main:Fischer,</span> 1989, pages 121–142.
+        </li>
+        <li><span lang="de">
+          <a href="https://www.youtube.com/watch?v=F5p9OWfkmKo">Theodor W. Adorno - Der Bürger als Revolutionär (Portrait 1/2)</a>
+          (<i class="ytchannel">PhilosophieKanal</i></span> on YouTube, 59 minutes).
+          <!--Documentary by Meinhard Prill and Kurt Schneider, 2003, 3sat-->
+          <br /><span lang="de"><a href="https://www.youtube.com/watch?v=-1dbBpVlKi0">Theodor W. Adorno - Wer denkt, ist nicht wütend (Portrait 2/2)</a>
+          (<i class="ytchannel">PhilosophieKanal</i></span> on YouTube, 58 minutes).
+        </li>
       </ul>
     </section>
 
