Add: Boghossian and Lindsay: How to Have Impossible Conversations

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -465,6 +465,15 @@
         a YouTube channel that contains a small number of French videos on street epistemology, including a five-part tutorial:
         <a href="https://www.youtube.com/playlist?list=PLRkE4Loln3jHxfEKH-SVrHslA18IVSQsZ" lang="fr">tutoriel&nbsp;&mdash; épistémologie de rue</a>.
       </li>
+      <li>Boghossian, Peter; Lindsay, James:
+        <i class="booktitle">How to Have Impossible Conversations: A Very Practical Guide</i>.
+        Da Capo Lifelong Books, 2019. (272 pages)
+        <a href="https://www.hachettebookgroup.com/titles/peter-boghossian/how-to-have-impossible-conversations/9780738285344/"><abbr>ISBN</abbr> 9780738285344</a>.
+        <br />From the publishers's book description:
+        <q>(&hellip;) In <i class="booktitle">How to Have Impossible Conversations</i>, Peter Boghossian and James Lindsay guide you through the straightforward, practical, conversational techniques necessary for every successful conversation — whether the issue is climate change, religious faith, gender identity, race, poverty, immigration, or gun control.
+        Boghossian and Lindsay teach the subtle art of instilling doubts and opening minds. They cover everything from learning the fundamentals for good conversations to achieving expert-level techniques to deal with hardliners and extremists.
+        This book is the manual everyone needs to foster a climate of civility, connection, and empathy.</q>
+      </li>
     </ul>
 
     <h3 id="provinganegative">Folk Logic: You Can't Prove a Negative</h3>
