Add: Stedman Jones: Das Kommunistische Manifest von Karl Marx und Friedrich Engels

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -132,6 +132,15 @@
           <a href="https://de.wikipedia.org/wiki/Kritik_des_Gothaer_Programms" hreflang="de" lang="de"><i class="booktitle">Kritik des Gothaer Programms</i></a>.
         </li>
       </ul>
+
+      <p>Print editions:</p>
+      <ul>
+        <li>Stedman Jones, Gareth:
+          <span lang="de"><i class="booktitle">Das Kommunistische Manifest von Karl Marx und Friedrich Engels. Einführung, Text, Kommentar</i>.
+          C. H. Beck,</span> 2012. (319 pages)
+          <a href="https://www.chbeck.de/stedman-jones-kommunistische-manifest/product/10271078" hreflang="de"><abbr>ISBN</abbr> 978-3-406-63883-1</a>.
+        </li>
+      </ul>
     </section>
 
     <section>
