Add: The best books on Spinoza recommended by Steven Nadler

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2220,6 +2220,31 @@
           </ul>
         </li>
         <li>
+          <a href="https://fivebooks.com/best-books/spinoza-steven-nadler/">The best books on Spinoza recommended by Steven Nadler</a>,
+          <i class="website">Five Books</i>, 14.10.2020.
+          Steven Nadler recommends the following books:
+          <ul>
+            <li><a href="https://press.princeton.edu/books/hardcover/9780691072227/the-collected-works-of-spinoza-volume-i"><i class="booktitle">The Collected Works of Spinoza, Volume I</i></a>
+              and
+              <a href="https://press.princeton.edu/books/hardcover/9780691167633/the-collected-works-of-spinoza-volume-ii"><i class="booktitle">The Collected Works of Spinoza, Volume II</i></a>,
+              edited by Edwin Curley (Princeton University Press, 1985 and 2016, respectively.
+            </li>
+            <li><a href="https://press.princeton.edu/books/paperback/9780691020372/behind-the-geometrical-method"><i class="booktitle">Behind the Geometrical Method: A Reading of Spinoza's Ethics</i></a>
+              by Edwin Curley (Princeton University Press, 1988),
+            </li>
+            <li><a href="https://www.hackettpublishing.com/a-study-of-spinoza-s-ethics"><i class="booktitle">A Study of Spinoza's Ethics</i></a>
+              by Jonathan Bennett (Hackett, 1984),
+            </li>
+            <li><a href="https://global.oup.com/academic/product/the-explainability-of-experience-9780199350162"><i class="booktitle">The Explainability of Experience: Realism and Subjectivity in Spinoza's Theory of the Human Mind</i>
+              by Ursula Renz (Oxford University Press, 2018),
+            </li>
+            <li><a href="https://global.oup.com/academic/product/spinoza-on-philosophy-religion-and-politics-9780198701217"><i class="booktitle">Spinoza on Philosophy, Religion, and Politics: The Theologico-Political Treatise</i></a>
+              by Susan James (Oxford University Press, 2014).
+            </li>
+            <!--@@also check other books/links in the article-->
+          </ul>
+        </li>
+        <li>
           <a href="https://www.keithfrankish.com/">Keith Frankish: Tricks of the Mind</a>:
           website of the British-born European philosopher Keith Frankish. He explains his site's title as follows:
           <blockquote>The title of this site, <i>Tricks of Mind</i>, reflects the role that notions of illusion and artifice play in my view of the mind, which has been heavily influenced by the work of Daniel Dennett.
