Add: The Communist Manifesto. With an introduction by Gareth Stedman Jones

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -140,13 +140,18 @@
           Manifest Verlag,</span> 2018.
           <a href="https://manifest-verlag.de/produkt/karl-marx-friedrich-engels-manifest-der-kommunistischen-partei/"><abbr>ISBN</abbr> 978-3-96156-048-6</a>.
         </li>
+        <li>Marx, Karl; Engels, Friedrich:
+          <i class="booktitle">The Communist Manifesto</i>. With an introduction by Gareth Stedman Jones. Penguin, 2002. (304 pages)
+          <a href="https://www.penguin.co.uk/books/35335/the-communist-manifesto/9780140447576.html"><abbr>ISBN</abbr> 9780140447576</a>.
+          <!--hardcover edition: https://www.penguin.co.uk/books/35335/the-communist-manifesto/9780141395906.html -->
+        </li>
         <li>Stedman Jones, Gareth:
           <span lang="de"><i class="booktitle">Das Kommunistische Manifest von Karl Marx und Friedrich Engels. Einführung, Text, Kommentar</i>.
           C. H. Beck,</span> 2012. (319 pages)
           <a href="https://www.chbeck.de/stedman-jones-kommunistische-manifest/product/10271078" hreflang="de"><abbr>ISBN</abbr> 978-3-406-63883-1</a>.
+          (German translation of the above.)
         </li>
         <!--
-        https://www.penguin.co.uk/books/35335/the-communist-manifesto/9780141395906.html
         Karl Marx: Kritik des Kapitalismus: Schriften zu Philosophie, Ökonomie, Politik und Soziologie. Herausgegeben von Florian Butollo und Oliver Nachtwey. suhrkamp taschenbuch wissenschaft. Suhrkamp, 2018. 
         Karl Marx: Ökonomisch-philosophische Manuskripte. Kommentar von Michael Quante. Suhrkamp Studienbibliothek. Suhrkamp, 2009.
         Karl Marx: Die Frühschriften: Von 1837 bis zum "Manifest der Kommunistischen Partei" 1848. Herausgegeben von Siegfried Landshut und Oskar Negt. Kröner, 2004.
