Add Karl Marx page to navigation

--- a/philosophy/kant.html
+++ b/philosophy/kant.html
@@ -32,7 +32,7 @@
           <!--li><a href="../philosophy/religion.html">Religion and Faith</a></li-->
           <li class="active"><a href="../philosophy/kant.html" lang="de">Immanuel Kant</a></li>
           <li><a href="../philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
-          <li class="notyet"><a href="../philosophy/marx_karl.html" lang="de">Karl Marx</a></li>
+          <li><a href="../philosophy/marx_karl.html" lang="de">Karl Marx</a></li>
         </ul>
       </li>
       <li><a href="../science/index.html">Science</a>
