--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -32,6 +32,7 @@
           <li><a href="../philosophy/religion.html">Religion and Faith</a></li>
           <li class="active"><a href="../philosophy/ethics.html">Ethics</a></li>
           <li><a href="../philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
+          <li><a href="../philosophy/marx_karl.html" lang="de">Karl Marx</a></li>
         </ul>
       </li>
       <li><a href="../science/index.html">Science</a>
