Add: Marx: Ökonomisch-philosophische Manuskripte. Kommentar von Michael Quante

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -135,6 +135,12 @@
 
       <p>Print editions:</p>
       <ul>
+        <li><span lang="de">Marx, Karl:
+          <i class="booktitle">Ökonomisch-philosophische Manuskripte</i>.
+          Kommentar von Michael Quante. Suhrkamp Studienbibliothek. Suhrkamp,</span> 2009. (411 pages)
+          <a href="https://www.suhrkamp.de/buecher/oekonomisch-philosophische_manuskripte-karl_marx_27015.html" hreflang="de"><abbr>ISBN</abbr> 978-3-518-27015-8</a>.
+          <br />This is an edition of the young Marx' Paris manuscripts.
+        </li>
         <li><span lang="de">Marx, Karl; Engels, Friedich:
           <i class="booktitle">Manifest der Kommunistischen Partei: Mit Einleitungen von Leo Trotzki und Sascha Staničić</i>.
           Manifest Verlag,</span> 2018.
@@ -153,7 +159,6 @@
         </li>
         <!--
         Karl Marx: Kritik des Kapitalismus: Schriften zu Philosophie, Ökonomie, Politik und Soziologie. Herausgegeben von Florian Butollo und Oliver Nachtwey. suhrkamp taschenbuch wissenschaft. Suhrkamp, 2018. 
-        Karl Marx: Ökonomisch-philosophische Manuskripte. Kommentar von Michael Quante. Suhrkamp Studienbibliothek. Suhrkamp, 2009.
         Karl Marx: Die Frühschriften: Von 1837 bis zum "Manifest der Kommunistischen Partei" 1848. Herausgegeben von Siegfried Landshut und Oskar Negt. Kröner, 2004.
         -->
       </ul>
