--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -146,7 +146,7 @@
           Manifest Verlag,</span> 2018.
           <a href="https://manifest-verlag.de/produkt/karl-marx-friedrich-engels-manifest-der-kommunistischen-partei/"><abbr>ISBN</abbr> 978-3-96156-048-6</a>.
         </li>
-        <li>Marx, Karl; Engels, Friedrich:
+        <li><span lang="de">Marx, Karl; Engels, Friedrich</span>:
           <i class="booktitle">The Communist Manifesto</i>. With an introduction by Gareth Stedman Jones. Penguin, 2002. (304 pages)
           <a href="https://www.penguin.co.uk/books/35335/the-communist-manifesto/9780140447576.html"><abbr>ISBN</abbr> 9780140447576</a>.
           <!--hardcover edition: https://www.penguin.co.uk/books/35335/the-communist-manifesto/9780141395906.html -->
@@ -156,6 +156,12 @@
           C. H. Beck,</span> 2012. (319 pages)
           <a href="https://www.chbeck.de/stedman-jones-kommunistische-manifest/product/10271078" hreflang="de"><abbr>ISBN</abbr> 978-3-406-63883-1</a>.
           (German translation of the above.)
+        </li>
+        <li><span lang="de">Marx, Karl:
+          <i class="booktitle">Kritik des Kapitalismus - Schriften zu Philosophie, Ökonomie, Politik und Soziologie</i>.
+          Herausgegeben von Florian Butollo und Oliver Nachtwey. Suhrkamp,</span> 2018. (666 pages)
+          <a href="https://www.suhrkamp.de/buecher/kritik_des_kapitalismus-karl_marx_29854.html" hreflang="de"><abbr>ISBN</abbr> 978-3-518-29854-1</a>.
+          <br />An anthology of Marx' writings published on the accosian of his 200th anniversary.
         </li>
         <!--
         Karl Marx: Kritik des Kapitalismus: Schriften zu Philosophie, Ökonomie, Politik und Soziologie. Herausgegeben von Florian Butollo und Oliver Nachtwey. suhrkamp taschenbuch wissenschaft. Suhrkamp, 2018. 
