Add: Waldun: How To Use Knowledge To Transform Yourself

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -383,7 +383,7 @@
         talks about the history of philosophy from Antiquity to 20th-century hermeneutics.
         The source is a <abbr>TV</abbr> series recorded in the year 2000.
       </li>
-      <!-- Faith and Science Conference (2014): Genesis and Genetics: https://www.youtube.com/playlist?list=PL-0zpu2toenb3bETgPaYB7QrOVpVkzUIA -->
+      <!--Faith and Science Conference (2014): Genesis and Genetics: https://www.youtube.com/playlist?list=PL-0zpu2toenb3bETgPaYB7QrOVpVkzUIA -->
     </ul>
 
     <h2>Other Resources on How to Become a Philosopher</h2>
@@ -498,6 +498,11 @@
         <a href="https://www.youtube.com/watch?v=xgf2jztjaF4"><abbr>FAQ</abbr>: <abbr>Dr</abbr> Sadler Responds #8 - You Have To Read The Actual Philosophical Text</a>
         (<i class="ytchannel">Gregory B. Sadler</i> on YouTube, 9 minutes, 30.01.2020.
         <!--Sadler's website: https://reasonio.wordpress.com/ -->
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=-9y6x2vmhM4">How To Use Knowledge To Transform Yourself</a>
+        (<i class="ytchannel">R. C. Waldun</i> on YouTube, 18 minutes, 21.20.2020).
+        <!--@@summarise. Not exclusively or specifically about philosophy, but relevant.-->
       </li>
     </ul>
 
