Add series for Kritik des Kapitalismus

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -159,12 +159,11 @@
         </li>
         <li><span lang="de">Marx, Karl:
           <i class="booktitle">Kritik des Kapitalismus - Schriften zu Philosophie, Ökonomie, Politik und Soziologie</i>.
-          Herausgegeben von Florian Butollo und Oliver Nachtwey. Suhrkamp,</span> 2018. (666 pages)
+          Herausgegeben von Florian Butollo und Oliver Nachtwey. suhrkamp taschenbuch wissenschaft. Suhrkamp,</span> 2018. (666 pages)
           <a href="https://www.suhrkamp.de/buecher/kritik_des_kapitalismus-karl_marx_29854.html" hreflang="de"><abbr>ISBN</abbr> 978-3-518-29854-1</a>.
           <br />An anthology of Marx' writings published on the accosian of his 200th anniversary.
         </li>
         <!--
-        Karl Marx: Kritik des Kapitalismus: Schriften zu Philosophie, Ökonomie, Politik und Soziologie. Herausgegeben von Florian Butollo und Oliver Nachtwey. suhrkamp taschenbuch wissenschaft. Suhrkamp, 2018. 
         Karl Marx: Die Frühschriften: Von 1837 bis zum "Manifest der Kommunistischen Partei" 1848. Herausgegeben von Siegfried Landshut und Oskar Negt. Kröner, 2004.
         -->
       </ul>
