Add: Weiner: Life-Changing Philosophy Books

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1732,6 +1732,20 @@
           </ul>
           <!--@@add books-->
         </li>
+        <li>Weiner, Eric:
+          <a href="https://fivebooks.com/best-books/life-changing-philosophy-books-eric-weiner/">Life-Changing Philosophy Books</a>,
+          <i class="website">Five Books</i>, 22.09.2020.
+          <br />Weiner, author of <i class="booktitle">The Socrates Express: In Search of Life Lessons from Dead Philosophers</i>,
+          recommends the following books:
+          <ul>
+            <li><i class="booktitle">The Handbook / The Enchiridion</i> by Epictetus,</li>
+            <li><i class="booktitle">Philosophy as a Way of Life</i> by Pierre Hadot,</li>
+            <li><i class="booktitle">Waiting for God</i> by Simone Weil,</li>
+            <li><i class="booktitle">The Heart of Philosophy</i> by Jacob Needleman,</li>
+            <li><i class="booktitle">Ultimate Questions</i> by Bryan Magee.</li>
+          </ul>
+          <!--Referrer: Nigel Warburton / @philosophybites, 18.10.2020: https://twitter.com/philosophybites/status/1317764901515988997 -->
+        </li>
         <li>Talisse, Robert:
           <a href="https://fivebooks.com/interview/robert-talisse-on-pragmatism/">The best books on Pragmatism</a>,
           <i class="website">Five Books</i> (October 2017?).
