Rename h2: History and Theory of Religion. Move more books to that section.

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -224,7 +224,7 @@
       </li>
     </ul>
 
-    <h2>History of Religion</h2>
+    <h2>History and Theory of Religion</h2>
     <p>There are many books about the history of religion or specific religions,
       but few that offer a convincing theory of the origin of religion.
       Many such theories assume that religion or faith originates from the attempts of early humans
@@ -294,6 +294,25 @@
       <li>Thrower, James:
         <i class="booktitle">The Alternative Tradition: Religion and the Rejection of Religion in the Ancient World</i>.  [1980] Religion and Society, Volume: 18. De Gruyter, 2011 (reprint).
         <a href="https://www.degruyter.com/view/title/6049?rskey=KRSJuh&result=1"><abbr>ISBN</abbr> 978-90-279-7997-1</a>.<!-- From  €109.95  -->
+      </li>
+      <li lang="fr">Durkheim, Émile:
+        <i class="booktitle">Les Formes élémentaires de la vie religieuse</i>. [1912] <abbr>CNRS</abbr> Editions, 2014. (644 pages)
+        <a href="https://www.cnrseditions.fr/catalogue/anthropologie-et-mondes-contemporains/les-formes-elementaires-de-la-vie-religieuse/" hreflang="fr"><abbr>ISBN</abbr> 9782271081681</a>.
+        <!-- https://fr.wikipedia.org/wiki/Les_Formes_%C3%A9l%C3%A9mentaires_de_la_vie_religieuse -->
+      </li>
+      <li lang="fr">Caillois, Roger: <i class="booktitle">L'homme et le sacré</i>. [1950] Folio Essais. Gallimard, 1988. (256 pages)
+        <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Folio/Folio-essais/L-homme-et-le-sacre" hreflang="fr"><abbr>ISBN</abbr> 9782070324576</a>.
+      </li>
+      <li lang="fr">Tarot, Camille: <i class="booktitle">Le symbolique et le sacré. Théories de la religion</i>. La Découverte, 2008. (912 pages)
+        <a href="https://editionsladecouverte.fr/catalogue/index-Le_symbolique_et_le_sacr__-9782707154286.html" hreflang="fr"><abbr>ISBN</abbr> 9782707154286</a>.
+        <br />
+        <q>La question de la religion – de son essence, de sa fonction, de son origine – a été centrale dans la sociologie et l’anthropologie classiques.
+        Pour la tirer des impasses et de la stagnation où elle est reléguée de nos jours, Camille Tarot propose ici un bilan critique des œuvres des meilleurs comparatistes, à travers leurs théories si contradictoires de la religion. Huit auteurs principaux sont soumis à examen&nbsp;:
+        Émile Durkheim, Marcel Mauss, Mircea Eliade, Georges Dumézil, Claude Lévi-Strauss, René Girard, Pierre Bourdieu et Marcel Gauchet.</q>
+      </li>
+      <li>
+        <a href="https://www.britannica.com/topic/sacrifice-religion/Theories-of-the-origin-of-sacrifice">Theories of the origin of sacrifice</a>,
+        <i class="booktitle">Encylopaedia Britannica</i>.
       </li>
       <!--
       <li> : <i class="booktitle"></i>. 
@@ -548,30 +567,11 @@
         <a href="https://erenow.net/ancient/ancient-greece-and-rome-an-encyclopedia-for-students-4-volume-set/390.php">Ritual and Sacrifice</a>,
         from <i class="booktitle">Ancient Greece and Rome: An Encyclopedia for Students</i> (4 Volume Set) by Carroll Moulton.
       </li>
-      <li>
-        <a href="https://www.britannica.com/topic/sacrifice-religion/Theories-of-the-origin-of-sacrifice">Theories of the origin of sacrifice</a>,
-        <i class="booktitle">Encylopaedia Britannica</i>.
-      </li>
       <li>Lewis, Joseph:
         <a href="http://apatheticagnostic.com/articles/reflections/ref04/ref069.html">Names of Gods Taboo</a>,
         <i class="blog">Apathetic Agnostic Church</i>, 09.11.2007.
         This article claims, among other things, that
         <q>The taboo against mentioning names has the same genesis as the prohibition against making graven images.</q>
-      </li>
-      <li lang="fr">Durkheim, Émile:
-        <i class="booktitle">Les Formes élémentaires de la vie religieuse</i>. [1912] <abbr>CNRS</abbr> Editions, 2014. (644 pages)
-        <a href="https://www.cnrseditions.fr/catalogue/anthropologie-et-mondes-contemporains/les-formes-elementaires-de-la-vie-religieuse/" hreflang="fr"><abbr>ISBN</abbr> 9782271081681</a>.
-        <!-- https://fr.wikipedia.org/wiki/Les_Formes_%C3%A9l%C3%A9mentaires_de_la_vie_religieuse -->
-      </li>
-      <li lang="fr">Caillois, Roger: <i class="booktitle">L'homme et le sacré</i>. [1950] Folio Essais. Gallimard, 1988. (256 pages)
-        <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Folio/Folio-essais/L-homme-et-le-sacre" hreflang="fr"><abbr>ISBN</abbr> 9782070324576</a>.
-      </li>
-      <li lang="fr">Tarot, Camille: <i class="booktitle">Le symbolique et le sacré. Théories de la religion</i>. La Découverte, 2008. (912 pages)
-        <a href="https://editionsladecouverte.fr/catalogue/index-Le_symbolique_et_le_sacr__-9782707154286.html" hreflang="fr"><abbr>ISBN</abbr> 9782707154286</a>.
-        <br />
-        <q>La question de la religion – de son essence, de sa fonction, de son origine – a été centrale dans la sociologie et l’anthropologie classiques.
-        Pour la tirer des impasses et de la stagnation où elle est reléguée de nos jours, Camille Tarot propose ici un bilan critique des œuvres des meilleurs comparatistes, à travers leurs théories si contradictoires de la religion. Huit auteurs principaux sont soumis à examen&nbsp;:
-        Émile Durkheim, Marcel Mauss, Mircea Eliade, Georges Dumézil, Claude Lévi-Strauss, René Girard, Pierre Bourdieu et Marcel Gauchet.</q>
       </li>
       <li>Seidel, Andrew L.:
         <i class="booktitle">The Founding Myth: Why Christian Nationalism Is Un-American</i>. Sterling Publishing, 2019. (352 pages)
