Add: Jourde: Aux musulmans, et en particulier aux élèves et parents d’élèves qui désapprouvent les caricatures de Mahomet

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -751,6 +751,11 @@
           <q cite="https://en.wikipedia.org/wiki/Dan_Barker">left Christianity in 1984.</q>
           He later become co-president of the Freedom From Religion Foundation.
         </li>
+        <li><span lang="fr">Jourde, Pierre:
+          <a href="https://www.nouvelobs.com/les-chroniques-de-pierre-jourde/20201020.OBS34966/aux-musulmans-et-en-particulier-aux-eleves-et-parents-d-eleves-qui-desapprouvent-les-caricatures-de-mahomet.html" hreflang="fr">Aux musulmans, et en particulier aux élèves et parents d’élèves qui désapprouvent les caricatures de Mahomet</a>,
+          <i class="magazine">Le Nouvel Obs</i></span>, 20.10.2020.
+          <!--Referrer @aphelion211, 25.10.2020: https://twitter.com/aphelion211/status/1320315252794363904 -->
+        </li>
 
         <!--Aalst carnaval:-->
         <li><span lang="nl">
