Add: Dawkins, Twitter, 28.10.2020

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -756,6 +756,10 @@
           <i class="magazine">Le Nouvel Obs</i></span>, 20.10.2020.
           <!--Referrer @aphelion211, 25.10.2020: https://twitter.com/aphelion211/status/1320315252794363904 -->
         </li>
+        <li>Dawkins, Richard:
+          <q cite="https://twitter.com/RichardDawkins/status/1321421399173550081">President Macron shamelessly objects to the sacred right of Muslims to decapitate French citizens. A clear case of Islamophobic hate crime.</q>
+          (<a href="https://twitter.com/RichardDawkins/status/1321421399173550081">Twitter, 28.10.2020</a>).
+        </li>
 
         <!--Aalst carnaval:-->
         <li><span lang="nl">
