--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -425,6 +425,12 @@
     <section>
       <h2>Other Resources</h2>
       <ul>
+        <li>
+          <a href="https://www.gcrr.org/">Global Center for Religious Research (<abbr>GCRR</abbr>)</a>:
+          <q cite="https://www.gcrr.org/about">The mission of <abbr>GCRR</abbr> is to make unique and significant contributions to the scientific, historical, and philosophical study of the world’s religions for the purpose of educating both the general public and academic specialists.</q> (29.10.2020)
+          <br />In September 2020, this <abbr>US</abbr>-based organisation organised the
+          <a href="https://www.gcrr.org/2020atheismconference">2020 International eConference on Atheism</a>.
+        </li>
         <li>Daniel Dennett:
           <a href="https://www.youtube.com/watch?v=DTepA-WV_oE">Responding to Pastor Rick Warren</a>
           (YouTube, 25 minutes): presentation at <abbr>TED</abbr> 2007.
