Add: Marx: Die Frühschriften: Von 1837 bis zum Manifest der Kommunistischen Partei 1848

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -163,9 +163,14 @@
           <a href="https://www.suhrkamp.de/buecher/kritik_des_kapitalismus-karl_marx_29854.html" hreflang="de"><abbr>ISBN</abbr> 978-3-518-29854-1</a>.
           <br />An anthology of Marx' writings published on the accosian of his 200th anniversary.
         </li>
-        <!--
-        Karl Marx: Die Frühschriften: Von 1837 bis zum "Manifest der Kommunistischen Partei" 1848. Herausgegeben von Siegfried Landshut und Oskar Negt. Kröner, 2004.
-        -->
+        <li><span lang="de">Marx, Karl:
+          <i class="booktitle">Die Frühschriften: Von 1837 bis zum Manifest der Kommunistischen Partei 1848</i>.
+          Herausgegeben von Siegfried Landshut. 7. Auflage. Kröner,</span> 2004. (670 pages)
+          <a href="https://www.kroener-verlag.de/details/product/die-fruehschriften/"><abbr>ISBN</abbr> 978-3-520-20907-8</a>.
+          <br />The texts in this volume include &laquo;<span lang="de">Kritik der Hegelschen Staatsphilosophie</span>&raquo;,
+          &laquo;<span lang="de">Nationalökonomie und Philosophie</span>&raquo;,
+          &laquo;<span lang="de">Die heilige Familie</span>&raquo; and &laquo;<span lang="de">Thesen über Feuerbach</span>&raquo;.
+        </li>
       </ul>
     </section>
 
@@ -393,6 +398,11 @@
         </li>
         <li>:
           <i class="booktitle"></i>. ( pages)
+          <a href=""><abbr>ISBN</abbr> </a>.
+          <br />
+        </li>
+        <li><span lang="de">:
+          <i class="booktitle"></i>.</span> ( pages)
           <a href=""><abbr>ISBN</abbr> </a>.
           <br />
         </li>
