Add: Roth: Plaidoyer athéiste

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -766,6 +766,12 @@
           <q cite="https://twitter.com/RichardDawkins/status/1321421399173550081">President Macron shamelessly objects to the sacred right of Muslims to decapitate French citizens. A clear case of Islamophobic hate crime.</q>
           (<a href="https://twitter.com/RichardDawkins/status/1321421399173550081">Twitter, 28.10.2020</a>).
         </li>
+        <li>Roth, Philip:
+          <span lang="fr"><a href="https://www.monde-diplomatique.fr/mav/145/ROTH/54571" hreflang="fr">Plaidoyer athéiste</a>,
+          <i class="magazine">Le Monde diplomatique</i></span>, February &mdash; March 2016.
+          <br />This is an excerpt from Roth's novel <i class="booktitle">Indignation</i> (2008), translated by <span lang="fr">Marie-Claire Pasquier</span>.
+          The text relies heavily on Bertrand Russell's <a href="https://en.wikipedia.org/wiki/Why_I_Am_Not_a_Christian">Why I Am Not a Christian</a>.
+        </li>
 
         <!--Aalst carnaval:-->
         <li><span lang="nl">
