Add: Marks: Why I Am Not a Scientist

--- a/lijst.html
+++ b/lijst.html
@@ -69,6 +69,11 @@
         <a href="https://www.routledge.com/Essential-Cognitive-Psychology-Classic-Edition/Parkin/p/book/9781848722477"><abbr>ISBN</abbr> 9781848722477</a>.</del>
       </li>
       -->
+      <li>Marks, Jonathan:
+        <i class="booktitle">Why I Am Not a Scientist: Anthropology and Modern Knowledge</i>.
+        University of California Press, 2009. (344 pages)
+        <a href="https://www.ucpress.edu/book/9780520259607/why-i-am-not-a-scientist"><abbr>ISBN</abbr> 9780520259607</a>.
+      </li>
       <li class="perhapsnot">Scholar, Richard:
         <i class="booktitle">Montaigne and the Art of Free-Thinking</i>.
         Peter Lang, 2016. (234 pages)
