--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2045,6 +2045,11 @@
           <a href="https://press.princeton.edu/books/hardcover/9780691188959/a-theory-of-the-aphorism"><i class="booktitle"> A Theory of the Aphorism: From Confucius to Twitter</i></a>
           (Princeton University Press, 2019).
         </li>
+        <li>Marks, Jonathan:
+          <i class="booktitle">Why I Am Not a Scientist: Anthropology and Modern Knowledge</i>.
+          University of California Press, 2009. (344 pages)
+          <a href="https://www.ucpress.edu/book/9780520259607/why-i-am-not-a-scientist"><abbr>ISBN</abbr> 9780520259607</a>.
+        </li>
       </ul>
     </section>
 
