--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -417,6 +417,11 @@
             </li>
           </ul>
         </li>
+        <li>Russell, Bertrand:
+          <a href="https://users.drew.edu/~jlenz/whynot.html">Why I Am Not a Christian</a>,
+          <i class="website">The Bertrand Russell Society</i> (no date).
+          The text was first published in 1927.
+        </li>
         <li><a href="https://www.venganza.org/">Church of the Flying Spaghetti Monster</a>.
         </li>
       </ul>
