Ad: Good: Scientific and Religious Habits of Mind: Irreconcilable Tensions in the Curriculum

--- a/science/index.html
+++ b/science/index.html
@@ -217,6 +217,11 @@
           Cambridge University Press, 2002. (456 pages)
           <a href="https://www.cambridge.org/de/academic/subjects/life-sciences/life-science-professional-development/scientific-method-practice?format=PB&isbn=9780521017084"><abbr>ISBN</abbr> 9780521017084</a>.
         </li>
+        <li>Good, Ron:
+          <i class="booktitle">Scientific and Religious Habits of Mind: Irreconcilable Tensions in the Curriculum</i>.
+          Complicated Conversation. Peter Lang, 2005. (104 pages)
+          <a href="https://www.peterlang.com/abstract/title/58277"><abbr>ISBN</abbr> 978-0-8204-7108-2</a>.
+        </li>
         <li>Davies, Brian E.:
           <i class="booktitle">Science in the Looking Glass: What Do Scientists Really Know?</i> Oxford University Press, 2003. (295 pages)
           <abbr>ISBN</abbr> 978 0 19 921918 6.
@@ -1532,6 +1537,10 @@
       <ul>
         <li>
           <a href=""></a>
+        </li>
+        <li>:
+          <i class="booktitle"></i>.
+          <a href=""><abbr>ISBN</abbr> </a>.
         </li>
       </ul>
     </section>
