Add: Lichtmesz: René Girard: Das Heilige, die Gewalt und der Sündenbock

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -1194,6 +1194,10 @@
             Girard’s response was all the more shocking for needing to be said at all in a roomful of theologians: “We might begin with personal sanctity.”
           </blockquote>
         </li>
+        <li><span lang="de">Lichtzmesz, Martin:
+          <a href="https://sezession.de/56997/rene-girard-das-heilige-die-gewalt-und-der-sundenbock" hreflang="de">René Girard: Das Heilige, die Gewalt und der Sündenbock</a>,
+          <i class="website">Sezession</i></span>, 21.02.2017.
+        </li>
         <li>
           <a href="https://lareviewofbooks.org/entitled-opinions/rene-girard-fight-stop/">René Girard: Why Do We Fight? How Do We Stop?</a>
           <i class="magazine"><abbr>LA</abbr> Review of Books</i>, 27.12.2018.
