Add: Meier: René Girard im Landesmuseum

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -1194,6 +1194,15 @@
             Girard’s response was all the more shocking for needing to be said at all in a roomful of theologians: “We might begin with personal sanctity.”
           </blockquote>
         </li>
+        <li><span lang="de">Meier, Urs:
+          <a href="https://www.journal21.ch/rene-girard-im-landesmuseum" hreflang="de">René Girard im Landesmuseum</a>,
+          <i class="website">Journal21.ch</i></span>, 15.03.2019.
+          <br />Article about the exhibition &ldquo;<span lang="de">Sündenbock</span>&rdquo;
+          that ran in the <span lang="de">Landesmuseum Zürich</span> until 30.06.2019.
+          The author admits that Girard is not explicitly mentioned in the exhibition
+          but points out that his work has made us aware that the scapegoat mechanism is deeply embedded in human culture.
+          <!--@@PDF-->
+        </li>
         <li><span lang="de">Lichtzmesz, Martin:
           <a href="https://sezession.de/56997/rene-girard-das-heilige-die-gewalt-und-der-sundenbock" hreflang="de">René Girard: Das Heilige, die Gewalt und der Sündenbock</a>,
           <i class="website">Sezession</i></span>, 21.02.2017.
