Add: rrabel: Rene Girard and the Scapegoat

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -1179,6 +1179,16 @@
           <a href="https://global.oup.com/academic/product/on-desire-9780195327076"><abbr>ISBN</abbr> 9780195327076</a>.
         </li>
         <li>
+          <a href="https://mcl.as.uky.edu/blogs/rrabel/rene-girard-and-scapegoat">Rene Girard and the Scapegoat</a>,
+          <i class="blog">rrabel blog, College of Arts and Science, University of Kentucky</i>, 12.11.2013.
+          <!--@@PDF @@includes list of questions for discussion:
+            1.Is Girard correct that all hierarchies and divisions within Thebes have broken down in Sophocles’ Oedipus?
+            2.Is Sophocles’ Oedipus a Girardian scapegoat for the city of Thebes?
+            3.Does Girard’s theory of scapegoating have relevance to Seneca’s play?
+            4.Had something occurred in Seneca’s Thebes that has abolished distinctions and degrees and led to the decay of society in the manner Girard envisions?
+          -->
+        </li>
+        <li>
           <a href="https://www.youtube.com/watch?v=Y8o-bjw8rXk">Why Should Anyone Care About Mimetic Theory?</a>
           (<i class="ytchannel">RavenCast</i> on YouTube, 2 minutes, 24.07.2013).
         </li>
